--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -107,13 +107,10 @@ div.wrapper{
 #head, #gallery, #breadcrumb, #container, #footer{
 	display:block; 
 	position:relative;
-	width:100%;
+	/*width:100%;*/
 	padding: 0; 
 	margin:0 auto;
 	}
-#gallery{
-	width: 974px;
-}
 /* ----------------------------------------------Head------------------------------------- */
 
 #head{
@@ -173,7 +170,7 @@ div.wrapper{
 /* ----------------------------------------------Container------------------------------------- */
 
 #container{
-	padding:0;
+	padding: 100px 200px;
 }
 #container h1, #container h2, #container h3, #container h4, #container h5, #container h6{
 	margin:0 0 15px 0; 
@@ -376,6 +373,19 @@ div.wrapper{
 	line-height:normal; 
 	border-bottom:1px dashed #CCCCCC;
 }
+
+.col-1{
+	width: 32%;
+	height: 30px;
+	float: left;
+}
+
+.col-2{
+	width: 35%;
+	height: 30px;
+	float: left;
+}
+
 #contactform{
 	display:block; 
 	float:left; 
