Admin Side Update V 1.0
- Added new Dashboard Page and manage tiles for insight
- Added Date filter
- Added Reset Button for filter
- Added MD5 function for Password
- Randomly Chnaged date to current date for some table

--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -14,7 +14,7 @@ body{
 	padding:0; 
 	font-size:13px; 
 	font-family:verdana, Arial, Helvetica, sans-serif; 
-	color:#FFFFFF; 
+	/*color:#FFFFFF; */
 	/*background-color:#4F473A;*/
 }
 
